# tkinter-document-viewer_dovi

./: ARCHIVE_NOTES.md  CONTRIBUTING.md  README.md  document_backend.py  logger.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirments.txt  setup.cfg  test_main.py
.github/workflows/: ci.yml  python-app.yml
tests/: test_document_backend.py  test_main.py
