[metadata]
name = tkinter-document-viewer_dovi
version = 1.0.0
author = Walery
author_email =
description = A lightweight Python/Tkinter app for reading PDFs, EPUBs, and MOBIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/draprar/tkinter-document-viewer_dovi
project_urls =
    Bug Tracker = https://github.com/draprar/tkinter-document-viewer_dovi/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop

[options]
python_requires = >=3.11

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    .pytest_cache

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tool:pytest]
testpaths = .
python_files = test_*.py
addopts = -v --strict-markers
markers =
    integration: marks tests as integration tests
    unit: marks tests as unit tests

